--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build/Release
+build/
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
@@ -33,3 +33,6 @@ build/Release
 **/**/android
 **/**/ios
 
+# Local config files
+.flowconfig
+.watchmanconfig
