--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,14 @@ build/Release
 
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
-**/node_modules
+**/**/node_modules
 
-**/.idea/
+.idea/
 
 # Directory generated for mobile targets
 **/**/android
 **/**/ios
 
+# Utilities/dependencies config files
+**/**/.watchmanconfig
+**/**/.flowconfig
