--- a/Jest/package.json
+++ b/Jest/package.json
@@ -1,13 +1,29 @@
 {
   "name": "Test-Jest",
   "description": "Test of Jest",
-  "repository": "https://github.com/TEODE/training",
+  "repository": "https://github.com/TEODE/training/Jest",
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
     "test": "jest"
   },
   "devDependencies": {
-    "jquery": "^2.1.4"
+    "babel-jest": "^5.3.0",
+    "jest-cli": "^0.7.1",
+    "jquery": "^2.1.4",
+    "react-addons-test-utils": "^0.14.2"
+  },
+  "dependencies": {
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2"
+  },
+  "jest": {
+    "scriptPreprocessor": "node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "node_modules/react",
+      "node_modules/react-dom",
+      "node_modules/react-addons-test-utils",
+      "node_modules/fbjs"
+    ]
   }
 }
